# mcc

./: README.md  com.streamer272.MCC.json  meson.build
data/: com.streamer272.MCC.appdata.xml.in  com.streamer272.MCC.desktop.in  com.streamer272.MCC.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  mcc.gresource.xml  mcc.in  meson.build  tables.py  window.py
src/gtk/: window.ui
